Balanced Password Challenge - Refactored and Commented